html-document added

--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -1,13 +1,43 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Post</title>
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <title>Post</title>
+  <link rel="stylesheet" href="../styles/post.css">
+</head>
 
+<body>
+  <div class="framework">
+    <img class="image__photo" src="../images/image.png" />
+    <div class="bg">
+      <img class="bg__photo" src="../images/bg.png" />
+    </div>
+    <div class="forma1"></div>
+    <img class="forma1__photo" src="../images/forma1.png" />
+    <div class="section__adventures">
+      <div class="section__adv">
+        <p> Adventures</p>
+      </div>
+      <div class="section__gall">
+        <p>awesome Gallery Post</p>
+      </div>
+      <div class="section__date">
+        <p>January 19, 2016</p>
+      </div>
+      <div class="section__read__more">
+        <div class="section__line1"></div>
+        <p>Read More</p>
+        <div class="section__line2"></div>
+      </div>
+    </div>
+    <div class="section__line3"></div>
+    <div class="comment">
+    </div>
+    <div class="comment_text">
+      <p>02 Comment</p>
+    </div>
   </div>
-</div>
 </body>
+
 </html>
